storage/innobase/srv/srv0start.cc
@@ -559,14 +559,12 @@ err_exit:
 
   fil_set_max_space_id_if_bigger(space_id);
 
+  mysql_mutex_lock(&fil_system.mutex);
   fil_space_t *space= fil_space_t::create(space_id, fsp_flags,
 					  FIL_TYPE_TABLESPACE, nullptr,
 					  FIL_ENCRYPTION_DEFAULT, true);
-  ut_a(fil_validate());
-  ut_a(space);
-
+  ut_ad(space);
   fil_node_t *file= space->add(name, fh, 0, false, true);
-  mysql_mutex_lock(&fil_system.mutex);
 
   if (create)
   {
